# caustic

./: .readthedocs.yml  .travis.yml  README.md  azure-pipelines.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
caustic/: Data.py  Models.py  __init__.py  data.py  fit_multiple_events.py  fit_parallax_model.py  fit_single_event.py  histogram_comparison.py  make_plots.py  make_plots_single.py  models.py  plot_histograms.py  test_finite_source_model.py  test_models.py  test_parallax_model.py  test_pspl_model.py  test_sample_ppc.py  testing_data_class.ipynb  trajectory.py  utils.py
caustic/notebooks/: Hierarchy.ipynb  error_bar_rescaling.ipynb  nasa_exoarchive_data.ipynb  parallax_coordinate_transform_sympy.ipynb  plot_histograms.ipynb  (+5 more)
data/: FSPL_table.npy
docs/: api_docs.rst  conf.py  environment.yml  index.md  index.rst  install.rst  requirements.txt
paper/: mnras_template.fdb_latexmk  mnras_template.fls  mnras_template.tex
src/: SingleLensModel.py  SingleLensModelMatern32.py  celerite_gradients_test.py  daft_pgms.py  emcee_gp_model.py  emcee_model.py  fit_moa_data.py  fit_multiple_events.py  fit_ogle_data.py  fit_single_lens_model.py  fit_single_lens_model_GP.py  fit_studentt_model.py  fit_zero_mean_gp_model.py  hierarchical_model_test.py  loading_ogle_data_example.py  make_plots.py  make_plots_zero_mean.py  pymc3_celerite.py  pymc3_celeriteflow.py  sampling_prior_predictive.py  sampling_prior_predictive_dist_and_SBC.py  simulation_based_calibration.py  test_rescaling_error_bars.py  testing_sampler_on_multiple_events.py  todo_list.md
(+125 files in other folders)
